<?xml version="1.0"?>
<package format="2">
  <name>pal_wbc_utils</name>
  <version>0.0.1</version>
  <description>The pal_wbc_utils package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="victor.lopez@pal-robotics.com">victor</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Proprietary</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>backward_ros</depend>
  <depend>pal_utils</depend>
  <depend>math_utils</depend>
  <depend>roscpp</depend>
  <depend>pal_ros_utils</depend>
  <depend>pal_wbc_msgs</depend>
  <depend>property_bag</depend>

  <exec_depend>reflexxes_adapter</exec_depend>

  <export>
  </export>
</package>
